# Image_Regcognition_Thing

./: README.md  pyproject.toml
src/ImageRegcognitionThingy/: CheckMediapipe.py  FaceKeypointMediaPipe.py
