[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "face-keypoints"
version = "0.1.0"
description = "Face keypoint detection utilities and training pipelines"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "opencv-python",
  "mediapipe",
  "albumentations",
  "tqdm",
  "tensorboard"
]

[tool.setuptools]
package-dir={""="src"}

[tool.setuptools.packages.find]
where = ["src"]
include =["ImageRegcognitionThingy"]